<resources>
    <string name="app_name">GalleryProject</string>
    <string name="title_allpic">All pictures</string>
    <string name="title_allalbums">Albums</string>
    <string name="title_setting">Setting</string>
    <string name="title_slideshow">Slide Show</string>
    <string name="title_selectall">Select All</string>
    <string name="title_gotocam">Go to camera</string>
    <string name="title_activity_view_picture">FullscreenActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_edit_pic">FullscreenActivity</string>
    <string name="title_detail">Detail</string>
    <string name="title_set_as_wallpaper">Set as ...</string>
    <string name="title_location_tag">Add location tag for image</string>
    <string name="title_change_Language">Language</string>
    <string-array name="Languages">
        <item name="English">
            English
        </item>
        <item name="Vietnamese">
            Vietnamese
        </item>
    </string-array>
    <string-array name="languageAlias">
        <item>"en"</item>
        <item>"vi"</item>
    </string-array>
    <string-array name="Theme">
        <item name="light_theme">
            Light
        </item>
        <item name="dark_theme">
            Dark
        </item>
    </string-array>
    <string name="lock">Lock</string>
    <string name="copy">Copy</string>
    <string name="title_copy">Copy</string>
    <string name="title_lock">Lock</string>
    <string name="title_my_album">My albums</string>
    <string name="title_people_location">People and Location</string>
    <string name="title_change_Theme">Change theme</string>
    <string name="language_key" translatable="false">language_selection</string>
    <string name="pin_key" translatable="false">secure_pin</string>
    <string name="default_pin_key" translatable="false">0000</string>
    <string name="theme_key" translatable="false">theme_selection</string>
    <string name="playVideoChip">Play video</string>
    <string name="detail">Detail</string>
    <string name="unknown">Unknown (￣﹃￣)</string>
    <string name="move_to_album">Move to album</string>
    <string name="delete">Delete</string>
    <string name="ask_for_delete_title">Are you sure to delete?</string>
    <string name="ask_for_delete_message">File(s) will delete  and no way to redo</string>
    <string name="change_layout">Change layout</string>
    <string name="enter_password">Enter password</string>
    <string name="change_password">Change password</string>
    <string name="unlock_all_media">Unlock all media</string>
    <string name="stop_slideshow">Stop slideshow</string>
    <string name="unlock_media">Unlock media</string>
    <string name="favorite">Favorite</string>
    <string name="image">Image</string>
    <string name="video" translatable="false">Video</string>
    <string name="title_gotoSecureAlbum">Open secure album</string>
    <string name="secret_album">Secret album</string>
    <string name="cannot_use_camera">Can\'t use camera</string>
    <string name="Delete_fail">Fail to delete</string>
    <string name="deleted">Deleted</string>
    <string name="home">Home</string>
</resources>